--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <form></form>
+    </header>
+    <main>
+      <p></p>
+    </main>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/FatimadelaIglesia" target="blank"
+        >Fatima de la Iglesia</a
+      >
+      is
+    </footer>
+  </body>
 </html>
