--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         >Fatima de la Iglesia</a
       >
       is
+      <a href="https://github.com/FatimadelaIglesia/Meteo" target="blank"
+        >open-sourced on Github
+      </a>
+      and
     </footer>
   </body>
 </html>
