--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <a href="https://github.com/FatimadelaIglesia/Meteo" target="blank"
         >open-sourced on Github
       </a>
-      and
+      and website hosted on
+      <a href="https://fatimameteo.netlify.app" target="blank">webhosted </a>
     </footer>
   </body>
 </html>
