--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
   </head>
   <body>
     <header>
-      <form></form>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="Search" />
+      </form>
     </header>
     <main>
-      <p></p>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:49, scattered clouds <br />
+          Humidity: 66%, wind: 3.13 km/hour
+        </p>
+      </div>
+      <div>☁️ 12℃</div>
     </main>
     <footer>
       This project was coded by
