--- a/index.html
+++ b/index.html
@@ -5,35 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds <br />
-          Humidity: 66%, wind: 3.13 km/hour
-        </p>
-      </div>
-      <div>☁️ 12℃</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/FatimadelaIglesia" target="blank"
-        >Fatima de la Iglesia</a
-      >
-      is
-      <a href="https://github.com/FatimadelaIglesia/Meteo" target="blank"
-        >open-sourced on Github
-      </a>
-      and website hosted on
-      <a href="https://fatimameteo.netlify.app" target="blank">webhosted </a>
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 14:49, scattered clouds <br />
+            Humidity: 66%, wind: 3.13 km/hour
+          </p>
+        </div>
+        <div>☁️ 12℃</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/FatimadelaIglesia" target="blank"
+          >Fatima de la Iglesia</a
+        >
+        is
+        <a href="https://github.com/FatimadelaIglesia/Meteo" target="blank"
+          >open-sourced on Github
+        </a>
+        and website hosted on
+        <a href="https://fatimameteo.netlify.app" target="blank">webhosted </a>
+      </footer>
+    </div>
   </body>
 </html>
