--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Tuesday 14:49, scattered clouds <br />
-            Humidity: 66%, wind: 3.13 km/hour
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Tuesday 14:49, scattered clouds <br />
+              Humidity: 66%, wind: 3.13 km/hour
+            </p>
+          </div>
+          <div class="weather-app-temperature">☁️ 12℃</div>
         </div>
-        <div>☁️ 12℃</div>
       </main>
       <footer>
         This project was coded by
