--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             <h1 class="weather-app-city">Paris</h1>
             <p class="weather-app-details">
               Tuesday 14:49, scattered clouds <br />
-              Humidity: 66%, wind: 3.13 km/hour
+              Humidity:<strong>66%</strong>, wind:<strong>3.13 km/hour</strong>
             </p>
           </div>
-          <div class="weather-app-temperature">☁️ 12℃</div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">☁️</div>
+            <div class="weather-app-temperature-value">12</div>
+            <div class="weather-app-unit">℃</div>
+          </div>
         </div>
       </main>
       <footer>
