--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">☁️</div>
+            <div class="weather-app-temperature-icon">☁️</div>
             <div class="weather-app-temperature-value">12</div>
-            <div class="weather-app-unit">℃</div>
+            <div class="weather-app-temperature-unit">℃</div>
           </div>
         </div>
       </main>
