--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
         <a href="https://fatimameteo.netlify.app" target="blank">webhosted </a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
