--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-temperature-icon">☁️</div>
-            <div class="weather-app-temperature-value" id="temperature"></div>
-            <div class="weather-app-temperature-unit">℃</div>
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+              class="weather-app-icon"
+            />
           </div>
+          <div class="weather-app-temperature-value" id="temperature"></div>
+          <div class="weather-app-temperature-unit">℃</div>
         </div>
       </main>
       <footer>
