--- a/index.html
+++ b/index.html
@@ -41,13 +41,10 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
-              class="weather-app-icon"
-            />
+            <div id="icon"></div>
+            <div class="weather-app-temperature-value" id="temperature"></div>
+            <div class="weather-app-temperature-unit">℃</div>
           </div>
-          <div class="weather-app-temperature-value" id="temperature"></div>
-          <div class="weather-app-temperature-unit">℃</div>
         </div>
       </main>
       <footer>
