--- a/index.html
+++ b/index.html
@@ -46,58 +46,7 @@
             <div class="weather-app-temperature-unit">℃</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tuesday</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-forecast-temperature">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Wednesday</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-forecast-temperature">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Thursday</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-forecast-temperature">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Friday</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-forecast-temperature">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Saturday</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-forecast-temperature">9°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
